ozone: Pick CRTCs with majority of planes.

When we pick a CRTC to use for a Display, we should prioritize
CRTCs that support the majority of overlays.

This CL also sorts the connectors before assigning CRTCs. If
a connector A supports only a subset of CRTCs supported
by connector B, A should be processed first.

BUG=675755

Committed: https://crrev.com/daf225a96c7293c6febc636cb53c32d67e3d72ab [formerly 93a8c0a676c220b4031af879a2691cb96f053480]
Cr-Original-Commit-Position: refs/heads/master@{#439248}
Review-Url: https://codereview.chromium.org/2420083003
Cr-Commit-Position: refs/heads/master@{#442472}

Former-commit-id: dcb4b63e4b07bf55e5ad9c20e9346e42c7eeba84